* Partly fixed: Search result excerpt breaks HTML entities.
* Changed tag: <txp:if_section> without a name attribute is now TRUE on a section page (old behaviour is preserved on upgrades).
* Changed tag: <txp:if_category name=""> is now FALSE on a category page (old behaviour is preserved on upgrades).
* Changed tag: <txp:link_url /> escapes its output.
* Speed: faster plugin loading from the database.
* Diagnostics tab: ignore line endings when checking for modified files and show full paths.
* Pages tab: allow 'default' page to be deleted if not used by a section.
* Developer: Fall back to standard page/permlink behaviour if custom_url_func() returns FALSE.

Changes in 4.0.7

* Parser: full nesting support, allowing unlimited nesting of identical tags.
* Parser: attribute values are parsed when enclosed in single quotes.
* Parser: unquoted attribute values are deprecated and will result in warnings when site status is not set to 'live'. Fix your templates and use double quotes to delimit attribute values.
* Feature: Expiry time for articles, accompanied by related tags
* Speed: various components of the parsing process have been optimized, which compensates the impact of increased parser complexity, resulting in slightly faster parsing speed
* New tags: <txp:expires />, <txp:if_expired>, <txp:if_expires>
* New tag: <txp:if_keywords>
* New tags: <txp:if_first_section>, <txp:if_last_section>
* New tags: <txp:if_first_category>, <txp:if_last_category>
* New tag: <txp:if_variable>
* New tag: <txp:modified />
* New tag: <txp:rsd /> specifies the Really Simple Discovery endpoint for XML-RPC clients
* New tag: <txp:variable />
* Changed tag: <txp:article /> can be used as a container tag
* Changed tag: <txp:article /> allows new attributes 'wraptag' and 'break'
* Changed tag: <txp:article_custom /> can be used as a container tag
* Changed tag: <txp:article_custom /> allows new attributes 'wraptag' and 'break'