@@ -8,6 +8,7 @@ Changes in 4.0.8
 * Changed tag: <txp:if_section> without a name attribute is now TRUE on a section page (old behaviour is preserved on upgrades).
 * Changed tag: <txp:if_category name=""> is now FALSE on a category page (old behaviour is preserved on upgrades).
 * Changed tag: <txp:link_url /> escapes its output.
+* Changed tag: <txp:file_download_list /> uses "wraptag", "break", and "label" attributes consistently like other tags.
 * Speed: faster plugin loading from the database.
 * Diagnostics tab: ignore line endings when checking for modified files and show full paths.
 * Pages tab: allow 'default' page to be deleted if not used by a section.
